<resources>
    <string name="app_name">TaskFlow</string>
    <string name="taskflow">TaskFlow</string>
    <string name="user_list_title">User List</string>
    <string name="back">Back</string>
    <string name="here_is_the_avatar">Here is the avatar</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user">Edit User</string>
    <string name="image_of_user">Image of user</string>
    <string name="user_avatar">User Avatar</string>
    <string name="add_user">Add User</string>
    <string name="total_users">TOTAL USERS</string>
    <string name="recently_added">RECENTLY ADDED</string>
    <string name="user_full_name">%1$s %2$s</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="delete_user_confirmation">Are you sure you want to delete this user?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_users_found">No users found</string>
    <string name="page_info">Page %1$d of %2$d</string>
    <string name="error_message">Error: %1$s</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_users_0">Total Users: 0</string>
    <string name="recently_added_0">Recently Added: 0</string>
    <string name="display_users">Display Users</string>
    <string name="add_user_2">Add User</string>
    <string name="load_users">Sync Users</string>
    <string name="search_users">Search users</string>
    <string name="previous">Previous</string>
    <string name="page_1_of_1">Page 1 of 1</string>
    <string name="next">Next</string>
    <string name="saving_changes">Saving changes…</string>
    <string name="image_of_the_user">Image of the user</string>
    <string name="app_logo">App Logo</string>
    <string name="_0">0</string>
    <string name="total_users_multiline">TOTAL\nUSERS</string>
    <string name="recently_added_multiline">RECENTLY\nADDED</string>
</resources>